Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "import planets.db\n",
+    "import sqlite3\n",
     "conn = sqlite3.connect('data.sqlite')\n",
     "c = conn.cursor()"
    ]
