--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT ''')"
+    "c.execute('''SELECT * FROM ''')"
    ]
   },
   {
