Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,8 @@
     "#Your code here\n",
     "import sqlite3\n",
     "conn = sqlite3.connect('planets.db')\n",
-    "c = conn.cursor()"
+    "c = conn.cursor()\n",
+    "import pandas as pd"
    ]
   },
   {
