Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,9 @@
     "import sqlite3\n",
     "conn = sqlite3.connect('planets.db')\n",
     "c = conn.cursor()\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.head()"
    ]
   },
   {
