--- a/index.ipynb
+++ b/index.ipynb
@@ -91,10 +91,7 @@
     "#Your code here\n",
     "import sqlite3\n",
     "conn = sqlite3.connect('planets.db')\n",
-    "c = conn.cursor()\n",
-    "import pandas as pd\n",
-    "df = pd.DataFrame(c.fetchall())\n",
-    "df.head()"
+    "c = conn.cursor()\n"
    ]
   },
   {
@@ -230,7 +227,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT * FROM planets.db WHE''')"
+    "c.execute('''SELECT * FROM planets.db WHERE ''')"
    ]
   },
   {
