--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
     "#Your code here\n",
     "import sqlite3\n",
     "import pandas as pd\n",
-    "conn = sqlite3.connect('planets')\n",
+    "conn = sqlite3.connect('planets.db')\n",
     "c = conn.cursor()\n"
    ]
   },
