Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -379,7 +379,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute('''''')"
+    "c.execute('''SELECT * FROM planets WHERE mass > 1.00''')"
    ]
   },
   {
