--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -315,50 +315,64 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>id</th>\n",
        "      <th>name</th>\n",
        "      <th>color</th>\n",
+       "      <th>num_of_moons</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>rings</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Mercury</td>\n",
-       "      <td>gray</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Jupiter</td>\n",
+       "      <td>orange</td>\n",
+       "      <td>68</td>\n",
+       "      <td>317.90</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Venus</td>\n",
-       "      <td>yellow</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Saturn</td>\n",
+       "      <td>hazel</td>\n",
+       "      <td>62</td>\n",
+       "      <td>95.19</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Earth</td>\n",
-       "      <td>blue</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Uranus</td>\n",
+       "      <td>light blue</td>\n",
+       "      <td>27</td>\n",
+       "      <td>14.54</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Mars</td>\n",
-       "      <td>red</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Jupiter</td>\n",
-       "      <td>orange</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Neptune</td>\n",
+       "      <td>dark blue</td>\n",
+       "      <td>14</td>\n",
+       "      <td>17.15</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      name   color\n",
-       "0  Mercury    gray\n",
-       "1    Venus  yellow\n",
-       "2    Earth    blue\n",
-       "3     Mars     red\n",
-       "4  Jupiter  orange"
+       "   id     name       color  num_of_moons    mass  rings\n",
+       "0   5  Jupiter      orange            68  317.90      0\n",
+       "1   6   Saturn       hazel            62   95.19      1\n",
+       "2   7   Uranus  light blue            27   14.54      1\n",
+       "3   8  Neptune   dark blue            14   17.15      1"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +380,8 @@
    "source": [
     "#Your code here\n",
     "c.execute('''SELECT * FROM planets WHERE mass > 1.00''')\n",
-    "c.fetchall()\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
     "df.head()"
    ]
   },
