--- a/index.ipynb
+++ b/index.ipynb
@@ -565,7 +565,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT * FROM planets WHERE mass <= 1.00''')\n",
+    "c.execute('''SELECT name, color FROM planets WHERE num_of_moons''')\n",
     "df = pd.DataFrame(c.fetchall())\n",
     "df.columns = [x[0] for x in c.description]\n",
     "df.head()"
