Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -558,14 +558,14 @@
        "3  Neptune   dark blue"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT name, color FROM planets WHERE num_of_moons''')\n",
+    "c.execute('''SELECT name, color FROM planets WHERE num_of_moons > 10''')\n",
     "df = pd.DataFrame(c.fetchall())\n",
     "df.columns = [x[0] for x in c.description]\n",
     "df.head()"
@@ -647,7 +647,11 @@
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute('''SELECT name, color FROM planets WHERE num_of_moons > 10''')\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head()"
    ]
   },
   {
