Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -715,7 +715,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT * FROM planets WHERE num_of_moons >= 1 AND mass <1.00''')\n",
+    "c.execute('''SELECT name, color FROM planets WHERE color = blue, light blue, dark blue''')\n",
     "df = pd.DataFrame(c.fetchall())\n",
     "df.columns = [x[0] for x in c.description]\n",
     "df.head()"
