--- a/index.ipynb
+++ b/index.ipynb
@@ -703,7 +703,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT name, color FROM planets WHERE color = \"blue\" or \"light blue\" or \"dark blue\"''')\n",
+    "c.execute('''SELECT name, color FROM planets WHERE color = \"blue\" or color = \"light blue\" or \"dark blue\"''')\n",
     "df = pd.DataFrame(c.fetchall())\n",
     "df.columns = [x[0] for x in c.description]\n",
     "df.head()"
