--- a/index.ipynb
+++ b/index.ipynb
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -687,23 +687,35 @@
        "      <td>Earth</td>\n",
        "      <td>blue</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Uranus</td>\n",
+       "      <td>light blue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Neptune</td>\n",
+       "      <td>dark blue</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    name color\n",
-       "0  Earth  blue"
+       "      name       color\n",
+       "0    Earth        blue\n",
+       "1   Uranus  light blue\n",
+       "2  Neptune   dark blue"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT name, color FROM planets WHERE color = \"blue\" or color = \"light blue\" or \"dark blue\"''')\n",
+    "c.execute('''SELECT name, color FROM planets WHERE color == \"blue\" or color == \"light blue\" or color == \"dark blue\"''')\n",
     "df = pd.DataFrame(c.fetchall())\n",
     "df.columns = [x[0] for x in c.description]\n",
     "df.head()"
